# RaptorCodes4GPU

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  cpu_test.cpp  gpu_test.cpp  test.cpp
include/: cuda_raptor_10.cuh  cuda_raptor_10.h  main.cuh  raptor10.h  raptor10.hpp  raptor_consts.h
src/: cuda_raptor_10.cu  main.cpp  main.cu  raptor10.c
src/common/: CMakeLists.txt  gf2matrix.cpp
src/cpuRaptor10/: CMakeLists.txt  raptor10.cpp
src/cudaRaptor10/: CMakeLists.txt  cuda_raptor_10.cu
src/cudaRaptorCodes/: CMakeLists.txt
src/raptorConsts/: CMakeLists.txt
